# orion-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  publish_to_github.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
langchain_core/: __init__.py  messages.py  tools.py
langchain_ollama/: __init__.py
langgraph_local_stub/: __init__.py  prebuilt.py
orion_cli/: .orionignore  main.py  requirements.txt  setup.py
orion_cli/docs/: CONTRIBUTING.md  PROVIDERS.md  README.md  USAGE.md
orion_cli/src/orion/: __init__.py  agent.py  main.py  repl.py
orion_cli/src/orion/commands/: __init__.py  builtins.py  custom.py  registry.py
orion_cli/src/orion/config/: __init__.py  defaults.py  providers.py  settings.py
orion_cli/src/orion/mcp/: __init__.py  client.py
orion_cli/src/orion/memory/: __init__.py  manager.py
orion_cli/src/orion/session/: __init__.py  checkpoint.py  manager.py
orion_cli/src/orion/tools/: __init__.py  filesystem.py  memory_tools.py  shell.py  web.py
orion_cli/src/orion/ui/: __init__.py  renderer.py  theme.py
orion_cli/tests/: conftest.py  test_commands.py  test_config.py  test_memory.py  test_providers.py  test_session.py  test_tools_filesystem.py
