[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orion-cli"
version = "0.1.0"
description = "AI coding assistant CLI — Your local alternative to Gemini CLI and Claude Code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CyberRaccoonTeam"},
]
keywords = ["ai", "cli", "coding-assistant", "ollama", "local-llm", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "ollama>=0.4.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.3.0",
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.43",
    "typer>=0.12.0",
    "pyperclip>=1.9.0",
    "PyYAML>=6.0.2",
    "tomli>=2.0.0",
    "httpx>=0.27.0",
    "ddgs>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
orion = "orion.main:app"

[tool.setuptools.packages.find]
where = ["orion_cli/src"]

[tool.pytest.ini_options]
testpaths = ["orion_cli/tests"]
pythonpath = ["orion_cli/src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
